all seems work with mouseClicks

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
         <div class="input-pad">            
             <button id = "backspace-btn" class="btn special-btn span"> <img src="/images/backspace.svg" class="backspace-icon" alt="backspace"> </button>  
             <button id = "ac-btn" class="btn special-btn">AC</button>
-            <button data-operator="*" class="btn special-btn">*</button> 
-            <button data = "number" class="btn regular-btn">7</button>   
-            <button data = "number" class="btn regular-btn">8</button>   
-            <button data = "number" class="btn regular-btn">9</button>   
-            <button data-operator="/" class="btn special-btn">/</button> 
-            <button data = "number" class="btn regular-btn">4</button>   
-            <button data = "number" class="btn regular-btn">5</button>   
-            <button data = "number" class="btn regular-btn">6</button>   
-            <button data-operator="-" class="btn special-btn">-</button> 
-            <button data = "number" class="btn regular-btn">1</button>   
-            <button data = "number" class="btn regular-btn">2</button>   
-            <button data = "number" class="btn regular-btn">3</button>   
-            <button data-operator="+" class="btn special-btn">+</button> 
-            <button data = "number" class="btn regular-btn span">0</button>   
-            <button data = "number" class="btn regular-btn">.</button> 
-            <button data-operator="=" class="btn special-btn">=</button>
+            <button data-operator = "*" class="btn special-btn">*</button> 
+            <button data-number = "7" class="btn regular-btn">7</button>   
+            <button data-number = "8" class="btn regular-btn">8</button>   
+            <button data-number = "9" class="btn regular-btn">9</button>   
+            <button data-operator = "/" class="btn special-btn">/</button> 
+            <button data-number = "4" class="btn regular-btn">4</button>   
+            <button data-number = "5" class="btn regular-btn">5</button>   
+            <button data-number = "6" class="btn regular-btn">6</button>   
+            <button data-operator = "-" class="btn special-btn">-</button> 
+            <button data-number = "1" class="btn regular-btn">1</button>   
+            <button data-number = "2" class="btn regular-btn">2</button>   
+            <button data-number = "3" class="btn regular-btn">3</button>   
+            <button data-operator = "+" class="btn special-btn">+</button> 
+            <button data-number = "0" class="btn regular-btn span">0</button>   
+            <button id = "point" data-number = "." class="btn regular-btn">.</button> 
+            <button id ="equals" class="btn special-btn">=</button>
         </div>
         
     </div>
