--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body id="body">
     <div class="calculator">
         <div class="input-display">
             <h3 id="display-history" class="display-histoy small hidden"></h3> 
