Add keydown trigger feature. fix some hedge cases. fix some css.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body id="body">
     <div class="calculator">
         <div class="input-display">
-            <h3 id="display-history" class="display-histoy small hidden"></h3> 
+            <h3 id="display-history" class="display-histoy small "></h3> 
             <h4 id="display" class="display">0</h4>
         </div>
 
